Fixing bug 76049. Making access past the end of a 'DOM array' return undefined and not null. r=fabian@geocities.com, sr=jband@netscape.com